improved audio unit test

--- a/configure.ac
+++ b/configure.ac
@@ -459,7 +459,7 @@ AS_IF([test "x$enable_core_audio" != xno],
       [AC_DEFINE([AGS_WITH_CORE_AUDIO], [1], [core-audio enabled])
 
       CORE_AUDIO_CFLAGS= 
-      CORE_AUDIO_LIBS="-framework AVFoundation -framework AVKit -framework CoreAudio -framework AudioToolbox -framework CoreMIDI"
+      CORE_AUDIO_LIBS=""-framework Foundation -framework CoreFoundation -framework AVFoundation -framework AVKit -framework CoreAudio -framework AudioToolbox -framework CoreMIDI"
       AC_SUBST(CORE_AUDIO_CFLAGS)
       AC_SUBST(CORE_AUDIO_LIBS)
 
@@ -488,7 +488,7 @@ AS_IF([test "x$enable_audio_unit_plugins" != xno],
       [AC_DEFINE([AGS_WITH_AUDIO_UNIT_PLUGINS], [1], [audio-unit-plugins enabled])
 
       AUDIO_UNIT_PLUGINS_CFLAGS= 
-      AUDIO_UNIT_PLUGINS_LIBS="-framework CoreFoundation -framework AVFoundation -framework AudioUnit -framework AudioToolbox"
+      AUDIO_UNIT_PLUGINS_LIBS="-framework Foundation -framework CoreFoundation -framework AVFoundation -framework AudioUnit -framework AudioToolbox"
       AC_SUBST(AUDIO_UNIT_PLUGINS_CFLAGS)
       AC_SUBST(AUDIO_UNIT_PLUGINS_LIBS)
 
@@ -736,7 +736,7 @@ if test "${LIBAGS_AUDIO_UNIT_PLUGINS_LIBS+set}" = set; then
 echo "variable \$LIBAGS_AUDIO_UNIT_PLUGINS_LIBS is set to: $LIBAGS_AUDIO_UNIT_PLUGINS_LIBS"
 else
 # -lvstgui_standalone
-LIBAGS_AUDIO_UNIT_PLUGINS_LIBS="-framework CoreFoundation -framework AVFoundation -framework AudioToolbox"
+LIBAGS_AUDIO_UNIT_PLUGINS_LIBS="-framework Foundation -framework CoreFoundation -framework AVFoundation -framework AudioToolbox"
 echo "variable \$LIBAGS_AUDIO_UNIT_PLUGINS_LIBS is set to: $LIBAGS_AUDIO_UNIT_PLUGINS_LIBS"
 fi
 
