--- a/Makefile.am
+++ b/Makefile.am
@@ -1398,6 +1398,7 @@ libags_audio_h_sources = \
 	ags/audio/ags_fluid_interpolate_none_util.h \
 	ags/audio/ags_fluid_util.h \
 	ags/audio/ags_fm_synth_util.h \
+	ags/audio/ags_modular_synth_util.h \
 	ags/audio/ags_raven_synth_util.h \
 	ags/audio/ags_seq_synth_util.h \
 	ags/audio/ags_star_synth_util.h \
@@ -1506,6 +1507,7 @@ libags_audio_c_sources = \
 	ags/audio/ags_fluid_interpolate_none_util.c \
 	ags/audio/ags_fluid_util.c \
 	ags/audio/ags_fm_synth_util.c \
+	ags/audio/ags_modular_synth_util.c \
 	ags/audio/ags_raven_synth_util.c \
 	ags/audio/ags_seq_synth_util.c \
 	ags/audio/ags_star_synth_util.c \
@@ -2204,6 +2206,12 @@ libags_audio_fx_h_sources = \
 	ags/audio/fx/ags_fx_fm_synth_channel_processor.h \
 	ags/audio/fx/ags_fx_fm_synth_recycling.h \
 	ags/audio/fx/ags_fx_fm_synth_audio_signal.h \
+	ags/audio/fx/ags_fx_modular_synth_audio.h \
+	ags/audio/fx/ags_fx_modular_synth_audio_processor.h \
+	ags/audio/fx/ags_fx_modular_synth_channel.h \
+	ags/audio/fx/ags_fx_modular_synth_channel_processor.h \
+	ags/audio/fx/ags_fx_modular_synth_recycling.h \
+	ags/audio/fx/ags_fx_modular_synth_audio_signal.h \
 	ags/audio/fx/ags_fx_raven_synth_audio.h \
 	ags/audio/fx/ags_fx_raven_synth_audio_processor.h \
 	ags/audio/fx/ags_fx_raven_synth_channel.h \
@@ -2395,6 +2403,12 @@ libags_audio_fx_c_sources = \
 	ags/audio/fx/ags_fx_fm_synth_channel_processor.c \
 	ags/audio/fx/ags_fx_fm_synth_recycling.c \
 	ags/audio/fx/ags_fx_fm_synth_audio_signal.c \
+	ags/audio/fx/ags_fx_modular_synth_audio.c \
+	ags/audio/fx/ags_fx_modular_synth_audio_processor.c \
+	ags/audio/fx/ags_fx_modular_synth_channel.c \
+	ags/audio/fx/ags_fx_modular_synth_channel_processor.c \
+	ags/audio/fx/ags_fx_modular_synth_recycling.c \
+	ags/audio/fx/ags_fx_raven_synth_audio_signal.c \
 	ags/audio/fx/ags_fx_raven_synth_audio.c \
 	ags/audio/fx/ags_fx_raven_synth_audio_processor.c \
 	ags/audio/fx/ags_fx_raven_synth_channel.c \
@@ -3138,6 +3152,8 @@ libgsequencer_machine_h_sources = \
 	ags/app/machine/ags_pitch_sampler_callbacks.h \
 	ags/app/machine/ags_pitch_sampler_file.h \
 	ags/app/machine/ags_pitch_sampler_file_callbacks.h \
+	ags/app/machine/ags_modular_synth.h \
+	ags/app/machine/ags_modular_synth_callbacks.h \
 	ags/app/machine/ags_raven_synth.h \
 	ags/app/machine/ags_raven_synth_callbacks.h \
 	ags/app/machine/ags_sfz_synth.h \
@@ -3283,6 +3299,8 @@ libgsequencer_machine_c_sources = \
 	ags/app/machine/ags_pitch_sampler_callbacks.c \
 	ags/app/machine/ags_pitch_sampler_file.c \
 	ags/app/machine/ags_pitch_sampler_file_callbacks.c \
+	ags/app/machine/ags_modular_synth.c \
+	ags/app/machine/ags_modular_synth_callbacks.c \
 	ags/app/machine/ags_raven_synth.c \
 	ags/app/machine/ags_raven_synth_callbacks.c \
 	ags/app/machine/ags_sfz_synth.c \
