--- a/ags/meson.build
+++ b/ags/meson.build
@@ -373,6 +373,7 @@ libags_audio_sources = files(
   'audio/ags_low_pass_filter_util.c',
   'audio/ags_marker.c',
   'audio/ags_midi.c',
+  'audio/ags_modular_synth_util.c',
   'audio/ags_noise_util.c',
   'audio/ags_notation.c',
   'audio/ags_note.c',
@@ -521,6 +522,12 @@ libags_audio_sources = files(
   'audio/fx/ags_fx_lv2_channel.c',
   'audio/fx/ags_fx_lv2_channel_processor.c',
   'audio/fx/ags_fx_lv2_recycling.c',
+  'audio/fx/ags_fx_modular_synth_audio.c',
+  'audio/fx/ags_fx_modular_synth_audio_processor.c',
+  'audio/fx/ags_fx_modular_synth_audio_signal.c',
+  'audio/fx/ags_fx_modular_synth_channel.c',
+  'audio/fx/ags_fx_modular_synth_channel_processor.c',
+  'audio/fx/ags_fx_modular_synth_recycling.c',
   'audio/fx/ags_fx_notation_audio.c',
   'audio/fx/ags_fx_notation_audio_processor.c',
   'audio/fx/ags_fx_notation_audio_signal.c',
@@ -1202,6 +1209,10 @@ libgsequencer_sources = files(
   'app/machine/ags_mixer_callbacks.c',
   'app/machine/ags_mixer_input_line.c',
   'app/machine/ags_mixer_input_pad.c',
+  'app/machine/ags_modulation_matrix.c',
+  'app/machine/ags_modulation_matrix_callbacks.c',
+  'app/machine/ags_modular_synth.c',
+  'app/machine/ags_modular_synth_callbacks.c',
   'app/machine/ags_oscillator.c',
   'app/machine/ags_oscillator_callbacks.c',
   'app/machine/ags_panel.c',
@@ -1601,6 +1612,7 @@ libags_audio_audio_headers = [
   'audio/ags_low_pass_filter_util.h',
   'audio/ags_midi.h',
   'audio/ags_marker.h',
+  'audio/ags_modular_synth_util.h',
   'audio/ags_noise_util.h',
   'audio/ags_notation.h',
   'audio/ags_note.h',
@@ -1765,6 +1777,12 @@ libags_audio_audio_fx_headers = [
   'audio/fx/ags_fx_lv2_channel.h',
   'audio/fx/ags_fx_lv2_channel_processor.h',
   'audio/fx/ags_fx_lv2_recycling.h',
+  'audio/fx/ags_fx_modular_synth_audio.h',
+  'audio/fx/ags_fx_modular_synth_audio_processor.h',
+  'audio/fx/ags_fx_modular_synth_audio_signal.h',
+  'audio/fx/ags_fx_modular_synth_channel.h',
+  'audio/fx/ags_fx_modular_synth_channel_processor.h',
+  'audio/fx/ags_fx_modular_synth_recycling.h',
   'audio/fx/ags_fx_notation_audio.h',
   'audio/fx/ags_fx_notation_audio_processor.h',
   'audio/fx/ags_fx_notation_audio_signal.h',
