--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -2228,10 +2228,20 @@ ags_fx_two_pass_aliase_recycling_get_type
 ags_fx_two_pass_aliase_recycling_new
 ags_fx_high_pass_recycling_get_type
 ags_fx_high_pass_recycling_new
+ags_fx_modular_synth_channel_get_type
+ags_fx_modular_synth_channel_new
 ags_fx_low_pass_audio_processor_get_type
 ags_fx_low_pass_audio_processor_new
 ags_fx_fm_synth_channel_get_type
 ags_fx_fm_synth_channel_new
+ags_fx_modular_synth_audio_get_type
+ags_fx_modular_synth_audio_scope_data_alloc
+ags_fx_modular_synth_audio_scope_data_free
+ags_fx_modular_synth_audio_channel_data_alloc
+ags_fx_modular_synth_audio_channel_data_free
+ags_fx_modular_synth_audio_input_data_alloc
+ags_fx_modular_synth_audio_input_data_free
+ags_fx_modular_synth_audio_new
 ags_fx_raven_synth_channel_get_type
 ags_fx_raven_synth_channel_new
 ags_fx_tremolo_audio_processor_get_type
@@ -2370,8 +2380,12 @@ ags_fx_volume_audio_processor_get_type
 ags_fx_volume_audio_processor_new
 ags_fx_buffer_audio_signal_get_type
 ags_fx_buffer_audio_signal_new
+ags_fx_modular_synth_channel_processor_get_type
+ags_fx_modular_synth_channel_processor_new
 ags_fx_sf2_synth_audio_processor_get_type
 ags_fx_sf2_synth_audio_processor_new
+ags_fx_modular_synth_audio_signal_get_type
+ags_fx_modular_synth_audio_signal_new
 ags_fx_synth_audio_get_type
 ags_fx_synth_audio_scope_data_alloc
 ags_fx_synth_audio_scope_data_free
@@ -2532,6 +2546,8 @@ ags_fx_notation_audio_signal_get_type
 ags_fx_notation_audio_signal_stream_feed
 ags_fx_notation_audio_signal_notify_remove
 ags_fx_notation_audio_signal_new
+ags_fx_modular_synth_audio_processor_get_type
+ags_fx_modular_synth_audio_processor_new
 ags_fx_synth_audio_signal_get_type
 ags_fx_synth_audio_signal_new
 ags_fx_ladspa_channel_get_type
@@ -2697,6 +2713,8 @@ ags_fx_synth_recycling_get_type
 ags_fx_synth_recycling_new
 ags_fx_vst3_channel_processor_get_type
 ags_fx_vst3_channel_processor_new
+ags_fx_modular_synth_recycling_get_type
+ags_fx_modular_synth_recycling_new
 ags_fx_notation_channel_get_type
 ags_fx_notation_channel_new
 ags_fx_pattern_recycling_get_type
@@ -3854,6 +3872,113 @@ ags_marker_get_data
 ags_marker_set_data
 ags_marker_duplicate
 ags_marker_new
+ags_modular_synth_util_get_type
+ags_modular_synth_util_alloc
+ags_modular_synth_util_copy
+ags_modular_synth_util_free
+ags_modular_synth_util_get_source
+ags_modular_synth_util_set_source
+ags_modular_synth_util_get_source_stride
+ags_modular_synth_util_set_source_stride
+ags_modular_synth_util_get_buffer_length
+ags_modular_synth_util_set_buffer_length
+ags_modular_synth_util_get_format
+ags_modular_synth_util_set_format
+ags_modular_synth_util_get_samplerate
+ags_modular_synth_util_set_samplerate
+ags_modular_synth_util_get_osc_0_oscillator
+ags_modular_synth_util_set_osc_0_oscillator
+ags_modular_synth_util_get_osc_0_frequency
+ags_modular_synth_util_set_osc_0_frequency
+ags_modular_synth_util_get_osc_0_phase
+ags_modular_synth_util_set_osc_0_phase
+ags_modular_synth_util_get_osc_0_volume
+ags_modular_synth_util_set_osc_0_volume
+ags_modular_synth_util_get_osc_1_oscillator
+ags_modular_synth_util_set_osc_1_oscillator
+ags_modular_synth_util_get_osc_1_frequency
+ags_modular_synth_util_set_osc_1_frequency
+ags_modular_synth_util_get_osc_1_phase
+ags_modular_synth_util_set_osc_1_phase
+ags_modular_synth_util_get_osc_1_volume
+ags_modular_synth_util_set_osc_1_volume
+ags_modular_synth_util_get_pitch_type
+ags_modular_synth_util_set_pitch_type
+ags_modular_synth_util_get_pitch_base_key
+ags_modular_synth_util_set_pitch_base_key
+ags_modular_synth_util_get_pitch_tuning
+ags_modular_synth_util_set_pitch_tuning
+ags_modular_synth_util_get_env_0_attack
+ags_modular_synth_util_set_env_0_attack
+ags_modular_synth_util_get_env_0_sustain
+ags_modular_synth_util_set_env_0_sustain
+ags_modular_synth_util_get_env_0_decay
+ags_modular_synth_util_set_env_0_decay
+ags_modular_synth_util_get_env_0_release
+ags_modular_synth_util_set_env_0_release
+ags_modular_synth_util_get_env_0_gain
+ags_modular_synth_util_set_env_0_gain
+ags_modular_synth_util_get_env_0_frequency
+ags_modular_synth_util_set_env_0_frequency
+ags_modular_synth_util_get_env_0_sends
+ags_modular_synth_util_set_env_0_sends
+ags_modular_synth_util_get_env_1_attack
+ags_modular_synth_util_set_env_1_attack
+ags_modular_synth_util_get_env_1_sustain
+ags_modular_synth_util_set_env_1_sustain
+ags_modular_synth_util_get_env_1_decay
+ags_modular_synth_util_set_env_1_decay
+ags_modular_synth_util_get_env_1_release
+ags_modular_synth_util_set_env_1_release
+ags_modular_synth_util_get_env_1_gain
+ags_modular_synth_util_set_env_1_gain
+ags_modular_synth_util_get_env_1_frequency
+ags_modular_synth_util_set_env_1_frequency
+ags_modular_synth_util_get_env_1_sends
+ags_modular_synth_util_set_env_1_sends
+ags_modular_synth_util_get_lfo_0_oscillator
+ags_modular_synth_util_set_lfo_0_oscillator
+ags_modular_synth_util_get_lfo_0_frequency
+ags_modular_synth_util_set_lfo_0_frequency
+ags_modular_synth_util_get_lfo_0_depth
+ags_modular_synth_util_set_lfo_0_depth
+ags_modular_synth_util_get_lfo_0_tuning
+ags_modular_synth_util_set_lfo_0_tuning
+ags_modular_synth_util_get_lfo_0_sends
+ags_modular_synth_util_set_lfo_0_sends
+ags_modular_synth_util_get_lfo_1_oscillator
+ags_modular_synth_util_set_lfo_1_oscillator
+ags_modular_synth_util_get_lfo_1_frequency
+ags_modular_synth_util_set_lfo_1_frequency
+ags_modular_synth_util_get_lfo_1_depth
+ags_modular_synth_util_set_lfo_1_depth
+ags_modular_synth_util_get_lfo_1_tuning
+ags_modular_synth_util_set_lfo_1_tuning
+ags_modular_synth_util_get_lfo_1_sends
+ags_modular_synth_util_set_lfo_1_sends
+ags_modular_synth_util_get_noise_frequency
+ags_modular_synth_util_set_noise_frequency
+ags_modular_synth_util_get_noise_gain
+ags_modular_synth_util_set_noise_gain
+ags_modular_synth_util_get_noise_sends
+ags_modular_synth_util_set_noise_sends
+ags_modular_synth_util_get_frame_count
+ags_modular_synth_util_set_frame_count
+ags_modular_synth_util_get_offset
+ags_modular_synth_util_set_offset
+ags_modular_synth_util_get_note_256th_mode
+ags_modular_synth_util_set_note_256th_mode
+ags_modular_synth_util_get_offset_256th
+ags_modular_synth_util_set_offset_256th
+ags_modular_synth_util_compute_s8
+ags_modular_synth_util_compute_s16
+ags_modular_synth_util_compute_s24
+ags_modular_synth_util_compute_s32
+ags_modular_synth_util_compute_s64
+ags_modular_synth_util_compute_float
+ags_modular_synth_util_compute_double
+ags_modular_synth_util_compute_complex
+ags_modular_synth_util_compute
 ags_recycling_get_type
 ags_recycling_flags_get_type
 ags_recycling_get_obj_mutex
