implemented audio buffer clear of signed integer types

--- a/m4/Makefile.in
+++ b/m4/Makefile.in
@@ -308,6 +308,7 @@ LT_REVISION = @LT_REVISION@
 LT_SYS_LIBRARY_PATH = @LT_SYS_LIBRARY_PATH@
 MAKEINFO = @MAKEINFO@
 MANIFEST_TOOL = @MANIFEST_TOOL@
+MANPAGES_XSL = @MANPAGES_XSL@
 MIDI2XML_CFLAGS = @MIDI2XML_CFLAGS@
 MIDI2XML_CXXFLAGS = @MIDI2XML_CXXFLAGS@
 MIDI2XML_LDFLAGS = @MIDI2XML_LDFLAGS@
