--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -3219,6 +3219,11 @@ ags_audio_buffer_util_get_buffer_length
 ags_audio_buffer_util_set_buffer_length
 ags_audio_buffer_util_format_from_soundcard
 ags_audio_buffer_util_get_copy_mode_from_format
+ags_audio_buffer_util_clear_s8
+ags_audio_buffer_util_clear_s16
+ags_audio_buffer_util_clear_s24
+ags_audio_buffer_util_clear_s32
+ags_audio_buffer_util_clear_s64
 ags_audio_buffer_util_clear_float
 ags_audio_buffer_util_clear_float32
 ags_audio_buffer_util_clear_double
