improved default config on macOS

--- a/conf/ags-core-audio.conf
+++ b/conf/ags-core-audio.conf
@@ -14,7 +14,7 @@ buffer-size=2048
 pcm-channels=2
 format=float
 samplerate=44100
-device=Apple Inc. - MacBook Pro-Lautsprecher
+device=Apple Inc. - Built-in Output
 use-cache=false
 cache-buffer-size=8192
 
